<resources>
    <!-- Application Details -->
    <string name="app_name">Notable</string>
    <string name="app_version">1.0.0</string>
    <string name="app_easter_egg">You are now a developer :D</string>

    <!-- Application Shortcuts -->
    <string name="shortcut_create">Create Note</string>

    <!-- External Links -->
    <string name="link_github">https://github.com/eipna/Notable</string>
    <string name="link_pretty_time">https://www.ocpsoft.org/prettytime/</string>

    <!-- Toolbar Titles -->
    <string name="toolbar_main">All notes</string>
    <string name="toolbar_archive">Archive</string>
    <string name="toolbar_deleted">Trash</string>
    <string name="toolbar_favorite">Favorite</string>
    <string name="toolbar_settings">Settings</string>

    <!-- Option Menus -->
    <string name="menu_share">Share</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_properties">Properties</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_unarchive">Unarchive</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_clear">Clear All</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sort">Sort by</string>

    <string name="menu_sort_title_ascending">Title (A -> Z)</string>
    <string name="menu_sort_title_descending">Title (Z -> A)</string>
    <string name="menu_sort_created_latest">Created (Latest)</string>
    <string name="menu_sort_created_oldest">Created (Oldest)</string>
    <string name="menu_sort_updated_latest">Updated (Latest)</string>
    <string name="menu_sort_updated_oldest">Updated (Oldest)</string>

    <!-- Text that shows up when the recycler view is empty -->
    <string name="empty_notes_archive">The archive is empty.</string>
    <string name="empty_notes_favorite">No favorite notes to explore.</string>
    <string name="empty_notes_main">No notes to see here.</string>
    <string name="empty_notes_trash">Your trash is clean :D</string>

    <!-- Note fields hints -->
    <string name="hint_note_title">Title goes here</string>
    <string name="hint_note_content">Jot your notes here…</string>

    <!-- Components (Eg. Button Names) -->
    <string name="btn_create_note">Jot Down</string>

    <!-- Text placeholder for custom note view -->
    <string name="template_note_title">Lorem Ipsum.</string>
    <string name="template_note_update">a few moments ago</string>
    <string name="template_note_created">14 May 2024</string>
    <string name="template_note_content">Lorem ipsum odor amet, consectetuer adipiscing elit.
        At volutpat donec potenti libero ante; dictumst litora. Netus netus posuere
        augue tempor potenti risus. Per ultricies massa sit posuere imperdiet vulputate
        senectus. Penatibus torquent potenti integer luctus diam donec accumsan
        rhoncus convallis. Venenatis litora litora id imperdiet ultricies penatibus
        tempor. Nunc inceptos natoque nullam lectus lacinia sapien id. Cubilia
        tristique odio luctus quisque habitasse dictum metus tempus dis. Amet dictum
        elementum himenaeos dis vel at magna litora donec. Odio interdum fames
        molestie taciti sodales tempor vel diam tellus.</string>

    <!-- Titles and summaries for preferences -->
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_title_theme">General</string>
    <string name="pref_summary_theme">Change between light mode or dark mode or follow the current system theme</string>
    <string name="pref_title_display">List</string>
    <string name="pref_summary_display">Choose how your notes are displayed</string>

    <string name="pref_category_note_appearance">Note Appearance</string>
    <string name="pref_title_rounded_notes">Rounded Notes</string>
    <string name="pref_summary_rounded_notes">Makes the corner of your notes rounded</string>
    <string name="pref_title_show_note_date_created">Show Creation Date</string>
    <string name="pref_summary_show_note_date_created">Shows the date when the note is created in the note list items</string>
    <string name="pref_title_note_date_format">Date Format</string>
    <string name="pref_summary_note_date_format">Choose a date format pattern</string>
    <string name="pref_title_note_title_max_lines">Max lines for note title</string>
    <string name="pref_title_note_content_max_lines">Max lines for note content</string>

    <string name="pref_category_backup">Backup</string>
    <string name="pref_title_import">Import notes</string>
    <string name="pref_title_export">Export notes</string>

    <string name="pref_category_about">About</string>
    <string name="pref_title_github">Github</string>
    <string name="pref_summary_github">eipna</string>
    <string name="pref_title_libraries">Libraries</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_summary_version">@string/app_version</string>
</resources>