<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/options_main_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/options_main_sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always">

        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_title_asc"
                    android:title="@string/menu_sort_title_ascending"/>

                <item
                    android:id="@+id/sort_title_desc"
                    android:title="@string/menu_sort_title_descending"/>

                <item
                    android:id="@+id/sort_date_created_asc"
                    android:title="@string/menu_sort_created_latest"/>

                <item
                    android:id="@+id/sort_date_created_desc"
                    android:title="@string/menu_sort_created_oldest"/>

                <item
                    android:id="@+id/sort_last_updated_asc"
                    android:title="@string/menu_sort_updated_latest"/>

                <item
                    android:id="@+id/sort_last_updated_desc"
                    android:title="@string/menu_sort_updated_oldest"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/options_main_favorite"
        android:title="@string/menu_favorite"/>

    <item
        android:id="@+id/options_main_archive"
        android:title="@string/menu_archive"/>

    <item
        android:id="@+id/options_main_trash"
        android:title="@string/menu_trash"/>

    <item
        android:id="@+id/options_main_settings"
        android:title="@string/menu_settings"/>

</menu>