<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/pref_category_appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="list_theme"
            app:title="@string/pref_title_theme"
            android:layout="@layout/layout_preference"
            app:summary="@string/pref_summary_theme"
            android:entries="@array/preference_list_theme"
            android:entryValues="@array/preference_list_theme_values"
            app:icon="@drawable/sun"/>

        <ListPreference
            android:key="list_display"
            android:title="@string/pref_title_display"
            app:icon="@drawable/note"
            android:layout="@layout/layout_preference"
            android:entries="@array/preference_list_display"
            android:entryValues="@array/preference_list_display_values"
            app:summary="@string/pref_summary_display"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_backup"
        app:iconSpaceReserved="false">

        <Preference
            android:key="prefs_import"
            app:title="@string/pref_title_import"
            android:icon="@drawable/backup_import"
            android:layout="@layout/layout_preference"/>

        <Preference
            android:key="prefs_export"
            app:title="@string/pref_title_import"
            android:icon="@drawable/backup_export"
            android:layout="@layout/layout_preference"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_about"
        app:iconSpaceReserved="false">

        <Preference
            app:title="@string/pref_title_github"
            app:summary="@string/pref_summary_github"
            app:icon="@drawable/link"
            android:layout="@layout/layout_preference">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/link_github"/>
        </Preference>

        <Preference
            android:key="prefs_libraries"
            android:title="@string/pref_title_libraries"
            android:icon="@drawable/link"
            android:layout="@layout/layout_preference"/>

        <Preference
            android:key="prefs_version"
            app:title="@string/pref_title_version"
            app:summary="@string/pref_summary_version"
            app:icon="@drawable/info"
            android:layout="@layout/layout_preference"/>
    </PreferenceCategory>

</PreferenceScreen>