<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/options_multi_archive"
        android:icon="@drawable/archive"
        android:title="@string/menu_archive"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/options_multi_unarchive"
        android:title="@string/menu_unarchive"
        app:showAsAction="ifRoom"
        android:icon="@drawable/unarchive"/>

    <item
        android:id="@+id/options_multi_trash"
        android:icon="@drawable/delete"
        android:title="@string/menu_trash"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/options_multi_restore"
        android:icon="@drawable/restore"
        app:showAsAction="ifRoom"
        android:title="@string/menu_restore"/>
</menu>