<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/noteCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:clickable="true"
    app:cardElevation="2dp"
    android:layout_marginStart="3dp"
    android:layout_marginEnd="3dp"
    android:layout_marginTop="5dp"
    android:foreground="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="14dp"
        android:paddingBottom="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/noteTitle"
            android:text="@string/template_note_title"
            android:textSize="15sp"
            android:textStyle="bold"
            android:maxLines="3"
            android:textColor="@color/primary_invert"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/noteContent"
            android:text="@string/template_note_content"
            android:maxLines="5"
            android:textSize="13sp"
            android:textColor="@color/primary_invert"
            android:justificationMode="inter_word"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_update"
                android:layout_marginEnd="4dp"
                android:layout_width="16dp"
                android:layout_height="16dp"/>

            <TextView
                android:id="@+id/noteLastUpdated"
                android:text="@string/template_note_update"
                android:textSize="11sp"
                android:textColor="@color/primary_invert"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>